[tool.poetry]
name = "pydep"
version = "0.1.0"
description = "Python Toolkit for dependencies and requirements instrospection"
license = "Propietary"
authors = ["Andres <andresbenavides404@gmail.com>"]
readme = "README.md"
repository = "git@github.com:AndresBena19/pydep-ast.git"
classifiers= [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
]
packages = [
    { include = "pydep" },
]

[tool.poetry.dependencies]
python = "^3.6.1,<4.0"
gitpython = "3.1.20"


[tool.poetry.dev-dependencies]
bandit = "1.7.0"
flake8 = "3.9.2"
mypy = "0.910"
pre-commit = "^2.13.0"
pytest = "6.2.4"
pytest-cov = "2.12.1"
pytest-mock = "3.6.1"
isort = "5.9.3"
pylint_pytest = "1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
  line-length = 90
  exclude = '''
/(
    \.git
  | \.venv
  | buck-out
  | build
  | dist
  | .egg
)/
'''

[tool.isort]
profile = "black"
